fix: fix form gap + date value assignment

--- a/src/app/modules/assessments/styles/assessments-modal-styles.scss
+++ b/src/app/modules/assessments/styles/assessments-modal-styles.scss
@@ -57,6 +57,12 @@ $header-stroke: #e5e7eb;
 
 .modal-content {
   background-color: $background;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 24px;
+  }
 }
 
 .action-button {
